--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
 </head>
 <body>
     <article>
+        <!-- Główny tytuł -->
         <h1>HTML</h1>
+        <!-- paragraf -->
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta impedit ipsum in vel quas modi fugiat iste voluptates laboriosam cupiditate.</p>
+        <!-- podtytuł -->
         <h2>HTML5</h2>
+        <!-- paragraf -->
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores quasi, cupiditate mollitia sint dolorum ullam veniam illo est soluta.</p>
+        <!-- podtytuł -->
         <h2>Obrazek</h2>
+        <!-- przykładowy obrazek -->
         <img src="img/digital-graphicscat-6747298_640.jpg" alt="kot">
 
     </article>
